hero section mobile view fixed

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -377,6 +377,9 @@ Version:	1.1
 }
 /* Mobile Screen */
 @media only screen and (max-width: 767px) {
+.hero-section{
+	height: 380px;
+}
 .header.sticky{
 	
 }
